[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Objects/Castle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/EnemyFormation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/NinjaLauncher.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/fade.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Karate.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/UI/button_retry.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/button_pressed_retry.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/button_menu.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/button_pressed_menu.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 180, 16 )

[sub_resource type="DynamicFont" id=2]

size = 92
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font" ]

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="Castle" parent="." index="0" instance=ExtResource( 2 )]

[node name="EnemyFormation" parent="." index="1" instance=ExtResource( 3 )]

[node name="NinjaLauncher" parent="." index="2" instance=ExtResource( 4 )]

[node name="Ground" type="StaticBody2D" parent="." index="3" groups=[
"Ground",
]]

position = Vector2( 0, 639 )
input_pickable = false
collision_layer = 3
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground" index="0"]

position = Vector2( 180, 16 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EndZone" type="Area2D" parent="." index="4"]

position = Vector2( 0, 626 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndZone" index="0"]

position = Vector2( 180, 16 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="MoveTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[node name="GameOver" type="Node2D" parent="." index="6"]

visible = false
position = Vector2( 31, 36 )
_sections_unfolded = [ "Transform" ]

[node name="Shade" type="TextureRect" parent="GameOver" index="0"]

modulate = Color( 0, 0, 0, 0.501961 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 298.0
margin_bottom = 604.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Label" type="Label" parent="GameOver" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 298.0
margin_bottom = 269.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.501961, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
text = "game
over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Buttons" type="HBoxContainer" parent="GameOver" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 304.0
margin_right = 298.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 1
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="ButtonRetry" type="TextureButton" parent="GameOver/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 69.0
margin_right = 133.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ButtonMenu" type="TextureButton" parent="GameOver/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 165.0
margin_right = 229.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
_sections_unfolded = [ "Textures" ]

[node name="Action" type="Label" parent="GameOver" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 368.0
margin_right = 298.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.501961, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[connection signal="attack_complete" from="NinjaLauncher" to="." method="_on_attack_complete"]

[connection signal="area_entered" from="EndZone" to="." method="_on_zone_entered"]

[connection signal="mouse_entered" from="GameOver/Buttons/ButtonRetry" to="." method="_on_retry_mouse_entered"]

[connection signal="mouse_exited" from="GameOver/Buttons/ButtonRetry" to="." method="_on_retry_mouse_exited"]

[connection signal="pressed" from="GameOver/Buttons/ButtonRetry" to="." method="_on_retry_pressed"]

[connection signal="mouse_entered" from="GameOver/Buttons/ButtonMenu" to="." method="_on_menu_mouse_entered"]

[connection signal="mouse_exited" from="GameOver/Buttons/ButtonMenu" to="." method="_on_menu_mouse_exited"]

[connection signal="pressed" from="GameOver/Buttons/ButtonMenu" to="." method="_on_menu_pressed"]


